--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-calendly": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-localization": "^1.0.19"
+    "react-localization": "^1.0.19",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -31,6 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^5.2.8"
   }
 }
